--- a/app/src/main/res/layout/controller_spot_details.xml
+++ b/app/src/main/res/layout/controller_spot_details.xml
@@ -11,7 +11,7 @@
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <com.muzakki.ahmad.widget.CollapsingToolbarLayout
+        <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsingToolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -47,6 +47,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="none"
@@ -120,49 +121,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/small">
 
-                <LinearLayout
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/commentsList"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="@dimen/normal">
-
-                        <EditText
-                            android:id="@+id/commentText"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="@dimen/small"
-                            android:layout_weight="1"
-                            android:background="@null"
-                            android:hint="@string/write_comment" />
-
-                        <ImageView
-                            android:id="@+id/sendComment"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="end|center_vertical"
-                            android:layout_weight="0"
-                            android:background="?attr/selectableItemBackgroundBorderless"
-                            android:clickable="true"
-                            android:src="@drawable/ic_send" />
-
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/divider_size"
-                        android:background="@color/divider" />
-
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/commentsList"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
-
-                </LinearLayout>
+                    android:nestedScrollingEnabled="false"
+                    app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
 
             </android.support.v7.widget.CardView>
 
