--- a/app/src/main/res/layout/header_comments.xml
+++ b/app/src/main/res/layout/header_comments.xml
@@ -1,40 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout android:id="@+id/commentsHeader"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:orientation="vertical">
+    android:padding="@dimen/normal">
 
-    <LinearLayout
-        android:id="@+id/commentsHeader"
+    <EditText
+        android:id="@+id/commentText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/normal">
+        android:layout_marginEnd="@dimen/small"
+        android:layout_weight="1"
+        android:background="@null"
+        android:hint="@string/write_comment" />
 
-        <EditText
-            android:id="@+id/commentText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/small"
-            android:layout_weight="1"
-            android:background="@null"
-            android:hint="@string/write_comment" />
-
-        <ImageView
-            android:id="@+id/sendComment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|center_vertical"
-            android:layout_weight="0"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:clickable="true"
-            android:src="@drawable/ic_send" />
-
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/divider_size"
-        android:background="@color/divider" />
+    <ImageView
+        android:id="@+id/sendComment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|center_vertical"
+        android:layout_weight="0"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:src="@drawable/ic_send" />
 
 </LinearLayout>
